test/deadCode6.slq
// args: --run
def main(){
	assert(false); // error
	x:=H(0:ğ”¹);
}
